kubernetes/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: jenkins
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jenkins
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/jenkins: "true"
        io.kompose.service: jenkins
    spec:
      containers:
      - env:
        - name: DOCKER_CERT_PATH
          value: /certs/client
        - name: DOCKER_HOST
          value: tcp://docker:2376
        - name: DOCKER_TLS_VERIFY
          value: "1"
        image: jenkins
        imagePullPolicy: ""
        name: jenkins
        ports:
        - containerPort: 50000
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - mountPath: /var/run/docker.sock
          name: jenkins-claim0
        - mountPath: /data/
          name: jenkins-claim1
        - mountPath: /tmp/mlflowruns
          name: jenkins-claim2
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: jenkins-claim0
        persistentVolumeClaim:
          claimName: jenkins-claim0
      - name: jenkins-claim1
        persistentVolumeClaim:
          claimName: jenkins-claim1
      - name: jenkins-claim2
        persistentVolumeClaim:
          claimName: jenkins-claim2
status: {}
