kubernetes/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: jenkins
  name: jenkins
spec:
  ports:
  - name: "50000"
    port: 50000
    targetPort: 50000
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: jenkins
status:
  loadBalancer: {}
